--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         update: update
       },
       fps: {
-        target: 2,
+        target: 12,
         // Change framerate to a very low value when exporting frames
         // target: 2,
         forceSetTimeOut: true
@@ -81,11 +81,11 @@
 
       this.mist = this.add.tileSprite(0, 209, 512, 64, 'mist').setOrigin(0, 0);
 
-      // this.add.image(260, 53, 'ship').setOrigin(0, 0);
-      // this.prop1 = this.add.image(252, 170, 'propeller-1').setOrigin(0.5, 0.5);
-      // this.prop2 = this.add.image(252, 170, 'propeller-2').setOrigin(0.5, 0.5);
-      // this.prop3 = this.add.image(252, 170, 'propeller-3').setOrigin(0.5, 0.5);
-      // this.add.image(252, 170, 'propeller-hub').setOrigin(0.5, 0.5);
+      this.add.image(260, 53, 'ship').setOrigin(0, 0);
+      this.prop1 = this.add.image(252, 170, 'propeller-1').setOrigin(0.5, 0.5);
+      this.prop2 = this.add.image(252, 170, 'propeller-2').setOrigin(0.5, 0.5);
+      this.prop3 = this.add.image(252, 170, 'propeller-3').setOrigin(0.5, 0.5);
+      this.add.image(252, 170, 'propeller-hub').setOrigin(0.5, 0.5);
 
       this.snapshotCount = 0;
       this.visibleProp = 1;
@@ -108,36 +108,36 @@
       this.wavesForest.tilePositionX += 8;
       this.mist.tilePositionX += 16;
 
-      // this.visibleProp += 1;
-      // if ((this.visibleProp - 1) % 3 === 0) {
-      //   this.visibleProp = 1;
-      // }
-      // switch (this.visibleProp) {
-      //   case 1:
-      //     this.prop1.setAlpha(1);
-      //     this.prop2.setAlpha(0);
-      //     this.prop3.setAlpha(0);
-      //     break;
-      //   case 2:
-      //     this.prop1.setAlpha(0);
-      //     this.prop2.setAlpha(1);
-      //     this.prop3.setAlpha(0);
-      //     break;
-      //   case 3:
-      //     this.prop1.setAlpha(0);
-      //     this.prop2.setAlpha(0);
-      //     this.prop3.setAlpha(1);
-      //     break;
-      // }
+      this.visibleProp += 1;
+      if ((this.visibleProp - 1) % 3 === 0) {
+        this.visibleProp = 1;
+      }
+      switch (this.visibleProp) {
+        case 1:
+          this.prop1.setAlpha(1);
+          this.prop2.setAlpha(0);
+          this.prop3.setAlpha(0);
+          break;
+        case 2:
+          this.prop1.setAlpha(0);
+          this.prop2.setAlpha(1);
+          this.prop3.setAlpha(0);
+          break;
+        case 3:
+          this.prop1.setAlpha(0);
+          this.prop2.setAlpha(0);
+          this.prop3.setAlpha(1);
+          break;
+      }
 
       // Uncomment this to export frames
-      const totalFrameCount = 64
-      if (this.snapshotCount < totalFrameCount) {
-        this.renderer.snapshot((image) => {
-          exportCanvasAsPNG(this.canvas, `${this.snapshotCount}`, image.src);
-        });
-        this.snapshotCount += 1
-      }
+      // const totalFrameCount = 64
+      // if (this.snapshotCount < totalFrameCount) {
+      //   this.renderer.snapshot((image) => {
+      //     exportCanvasAsPNG(this.canvas, `${ this.snapshotCount }`, image.src);
+      //   });
+      //   this.snapshotCount += 1
+      // }
       // Once frames are exported, you can convert them to a GIF with imagemagick:
       // convert -delay 20 -loop 0 *.png myimage.gif
     }
